--- a/MOBILE/src/app/login/login.page.html
+++ b/MOBILE/src/app/login/login.page.html
@@ -14,6 +14,7 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
+    <ion-button expand="block" color="primary" (click)="onSubmit()">Iniciar sesión</ion-button>
   </form>
 
   <ion-card>
