--- a/MOBILE/src/app/login/login.page.html
+++ b/MOBILE/src/app/login/login.page.html
@@ -17,12 +17,25 @@
     <ion-button expand="block" color="primary" (click)="onSubmit()">Iniciar sesión</ion-button>
   </form>
 
+  <ion-card color="primary" *ngIf="errorMessages.length > 0">
+    <ion-card-header>
+      <ion-card-title>Errores</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let error of errorMessages">
+          <ion-label>- {{error}}</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
   <ion-card>
     <ion-card-header>
       <ion-card-title>¿No tienes cuenta?</ion-card-title>
-      <ion-card-subtitle>Registrate</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
+      <ion-button color="secundary"[routerLink]="['/register']" routerLinkActive="router-link-active" >Registrate</ion-button>
     </ion-card-content>
   </ion-card>
   
