--- a/MOBILE/src/app/menu/editarinfo/editarinfo.page.html
+++ b/MOBILE/src/app/menu/editarinfo/editarinfo.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Información Personal</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,7 +18,6 @@
     <ion-item>
       <ion-icon aria-hidden="true" name="person" slot="start"></ion-icon>
       <ion-label>Nombre</ion-label>
-      
       <ion-card>
         <ion-card-header>
           <ion-card-title>{{logUser.usuario[0].name}}</ion-card-title>
@@ -26,13 +28,13 @@
     <ion-item>
       <ion-icon aria-hidden="true" name="mail" slot="start"></ion-icon>
       <ion-label>Correo</ion-label>
-
       <ion-card>
         <ion-card-header>
           <ion-card-title>{{logUser.usuario[0].email}}</ion-card-title>
         </ion-card-header>
       </ion-card>
     </ion-item>
+
     <ion-item>
       <ion-icon aria-hidden="true" name="calendar-number" slot="start"></ion-icon>
       <ion-label>Año de nacimiento</ion-label>
@@ -42,6 +44,7 @@
         </ion-card-header>
       </ion-card>
     </ion-item>
+
     <ion-item>
       <ion-icon aria-hidden="true" name="document" slot="start"></ion-icon>
       <ion-label>Rut</ion-label>
