--- a/MOBILE/src/app/menu/visualizar/visualizar.page.html
+++ b/MOBILE/src/app/menu/visualizar/visualizar.page.html
@@ -1,13 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>  
     <ion-title>visualizar</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">visualizar</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
 </ion-content>
