feat(Mobile): Consumo de API Github, cambiar contraseña y mensajes de error en register y login.

--- a/MOBILE/src/app/login/login.page.html
+++ b/MOBILE/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Inicio de sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -32,10 +32,10 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-card-title>¿No tienes cuenta?</ion-card-title>
+      <ion-card-title color="white">¿No tienes cuenta?</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-button color="secundary"[routerLink]="['/register']" routerLinkActive="router-link-active" >Registrate</ion-button>
+      <ion-button fill="clear" [routerLink]="['/register']" routerLinkActive="router-link-active" >Regístrate</ion-button>
     </ion-card-content>
   </ion-card>
   
