--- a/MOBILE/src/app/app.component.html
+++ b/MOBILE/src/app/app.component.html
@@ -1,3 +1,29 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" content-id="main" color="primary">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menú</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+
+        <ion-item (click)="visualizar()" routerLinkActive="router-link-active">
+          <ion-icon name= "logo-github"slot="start"></ion-icon>
+          <ion-label>Visualizar</ion-label>
+        </ion-item>
+
+        <ion-item (click)="editarInfo()">
+          <ion-icon name="person-circle" slot="start"></ion-icon>
+          <ion-label>Perfil</ion-label>
+        </ion-item>
+
+        <ion-item (click) = "logout()">
+          <ion-icon name="log-out-outline" slot="start"></ion-icon>
+          <ion-label>Cerrar sesión</ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
