--- a/MOBILE/src/app/home/home.page.html
+++ b/MOBILE/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>Inicio</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -29,7 +29,7 @@
     <ion-card>
       <ion-card-content>
         <ion-button color="primary" [routerLink]="['/login']" routerLinkActive="router-link-active">Inicio de sesión</ion-button>
-        <ion-button color="secundary" [routerLink]="['/register']" routerLinkActive="router-link-active">Registrate</ion-button>
+        <ion-button fill="clear" [routerLink]="['/register']" routerLinkActive="router-link-active">Registrate</ion-button>
       </ion-card-content>
     </ion-card>
   </ion-card>
