--- a/MOBILE/src/app/menu/menu-login/menu-login.page.html
+++ b/MOBILE/src/app/menu/menu-login/menu-login.page.html
@@ -1,27 +1,26 @@
-<ion-split-pane contentId="main">
-  <ion-menu side="start" menuId="first" contentId="main">
+<ion-app>
+  <ion-menu menuId="main-menu" content-id="main">
     <ion-header>
-      <ion-toolbar color="primary">
-        <ion-title>Menu</ion-title>
+      <ion-toolbar>
+        <ion-title>Menú</ion-title>
       </ion-toolbar>
     </ion-header>
     <ion-content>
       <ion-list>
-        <ion-menu-toggle auto-hide="false" *ngFor="let item of paginas; let i = index">
-          <ion-item (click)="cambiarIndiceSeleccionado(i)" routerDirection="root" [routerLink]="[item.url]" lines="none" detail="false" [class.selected]="indiceSeleccionado == i">
-              <ion-icon slot="start" [name]="item.icono + '-outline'"></ion-icon>
-              <ion-label> {{item.titulo}} </ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-        <ion-menu-toggle auto-hide="false">
-          <ion-item (click)="salir()" routerDirection="root" lines="none" detail="false">
-            <ion-icon slot="start" name="exit-outline"></ion-icon>
-            <ion-label>Salir</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
+        <ion-item>
+          <ion-icon [routerLink]="['/visualizar']" routerLinkActive="router-link-active"  name="commits" slot="start"></ion-icon>
+          <ion-label>Visualizar</ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['/editarinfo']">
+          <ion-icon name="edit" slot="start"></ion-icon>
+          <ion-label>Perfil</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="logout" slot="start" (click) = "logout()"></ion-icon>
+          <ion-label>Cerrar sesión</ion-label>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
-
   <ion-router-outlet id="main"></ion-router-outlet>
-</ion-split-pane>
+</ion-app>
