feat(Mobile): Implementar lectura de commits e información de repositorios con commits de cada uno

--- a/MOBILE/src/app/menu/menu-login/menu-login.page.html
+++ b/MOBILE/src/app/menu/menu-login/menu-login.page.html
@@ -8,11 +8,11 @@
     <ion-content>
       <ion-list>
         <ion-item>
-          <ion-icon [routerLink]="['/visualizar']" routerLinkActive="router-link-active"  name="commits" slot="start"></ion-icon>
+          <ion-icon [routerLink]="['/visualizar']" routerLinkActive="router-link-active"  name="eye" slot="start"></ion-icon>
           <ion-label>Visualizar</ion-label>
         </ion-item>
         <ion-item [routerLink]="['/editarinfo']">
-          <ion-icon name="edit" slot="start"></ion-icon>
+          <ion-icon name="person-circle" slot="start"></ion-icon>
           <ion-label>Perfil</ion-label>
         </ion-item>
         <ion-item>
