--- a/MOBILE/src/app/login/login.page.html
+++ b/MOBILE/src/app/login/login.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form [formGroup]="formulario">
+  <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Correo</ion-label>
       <ion-input type="email" formControlName="email"></ion-input>
@@ -14,7 +14,7 @@
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
-    <ion-button expand="block" color="primary" (click)="onSubmit()">Iniciar sesión</ion-button>
+    <ion-button expand="block" color="primary" type="submit">Iniciar sesión</ion-button>
   </form>
 
   <ion-card color="primary" *ngIf="errorMessages.length > 0">
