--- a/MOBILE/src/app/app.component.html
+++ b/MOBILE/src/app/app.component.html
@@ -8,12 +8,12 @@
     <ion-content>
       <ion-list>
 
-        <ion-item (click)="visualizar()" routerLinkActive="router-link-active">
+        <ion-item [routerLink]="['visualizar']">
           <ion-icon name= "logo-github"slot="start"></ion-icon>
           <ion-label>Visualizar</ion-label>
         </ion-item>
 
-        <ion-item (click)="editarInfo()">
+        <ion-item [routerLink]="['editarinfo']">
           <ion-icon name="person-circle" slot="start"></ion-icon>
           <ion-label>Perfil</ion-label>
         </ion-item>
