--- a/MOBILE/src/app/editarinfo/editarinfo.page.html
+++ b/MOBILE/src/app/editarinfo/editarinfo.page.html
@@ -1,9 +1,9 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+<ion-header>
+  <ion-toolbar>    
     <ion-title>Información Personal</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -56,6 +56,6 @@
     </ion-item>
   </ion-list>
   <ion-button expand="block" id="open-action-sheet">Editar</ion-button>
-<ion-action-sheet trigger="open-action-sheet" header="¿Qué deseas hacer?" [buttons]="actionSheetButtons"></ion-action-sheet>
+  <ion-action-sheet trigger="open-action-sheet" header="¿Qué deseas hacer?"
+    [buttons]="actionSheetButtons"></ion-action-sheet>
 </ion-content>
-
