--- a/MOBILE/src/app/login/login.page.html
+++ b/MOBILE/src/app/login/login.page.html
@@ -1,10 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>Inicio de sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Correo</ion-label>
