feat(Mobile): Actualizar información.

--- a/MOBILE/src/app/home/home.page.html
+++ b/MOBILE/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+    <ion-title>MobileHub</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,6 +11,7 @@
     </ion-toolbar>
   </ion-header> 
   <ion-card>
+    <img src="assets/img/mobilehub.png" alt="mobilehub_img">
     <ion-card-header>
       <ion-card-title>
         <ion-label>
