--- a/MOBILE/src/app/app.component.html
+++ b/MOBILE/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu menuId="main-menu" content-id="main" color="primary">
+  <ion-menu menuId="main-menu" content-id="main-menu" color="primary">
     <ion-header>
       <ion-toolbar>
         <ion-title>Menú</ion-title>
@@ -22,8 +22,9 @@
           <ion-icon name="log-out-outline" slot="start"></ion-icon>
           <ion-label>Cerrar sesión</ion-label>
         </ion-item>
+
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+  <ion-router-outlet id="main-menu"></ion-router-outlet>
 </ion-app>
